--- a/C971 Isabella Grigolla/Views/CourseAdd.xaml
+++ b/C971 Isabella Grigolla/Views/CourseAdd.xaml
@@ -70,6 +70,13 @@
             FontSize="Medium" Grid.Row="6" Grid.Column="1" x:Name="CourseInstructorEmail"/>
 
 
+                <Label Grid.Row="7" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Notes</Label>
+                <Editor Grid.Row="7" Grid.Column="1" x:Name="NotesFolders" Placeholder="Enter your notes here"></Editor>
+
+                <Label Grid.Row="8" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" Text="Notification" />
+                <Switch Grid.Row="8" Grid.Column="1" x:Name="Notifications" HorizontalOptions="End" IsToggled="True" VerticalOptions="Center"/>
+
+
             </Grid>
 
 
