--- a/C971 Isabella Grigolla/Views/AssessmentAdd.xaml
+++ b/C971 Isabella Grigolla/Views/AssessmentAdd.xaml
@@ -2,11 +2,62 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="C971_Isabella_Grigolla.Views.AssessmentAdd">
+
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem x:Name="SaveAssessment" Text="Save" Clicked="SaveAssessment_Clicked"></ToolbarItem>
+        <ToolbarItem x:Name="CancellAssessment" Text="Cancel" Clicked="CancellAssessment_Clicked"></ToolbarItem>
+        <ToolbarItem x:Name="Home" Text="Home" Clicked="Home_Clicked"></ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
+    
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Grid Padding="5" RowSpacing="1" ColumnSpacing="11" BackgroundColor="Gray">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Name</Label>
+                <Label Text="{Binding Name}"
+x:Name="AssessmentName" FontSize="Medium" Grid.Row="0" Grid.Column="1" VerticalTextAlignment="Center" />
+
+
+                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Type of Assessment</Label>
+                <Picker Grid.Row="1" Grid.Column="1" FontSize="Medium" x:Name="AssessmentTypePicker"
+ Title="Set a Status"
+ TitleColor="Navy">
+                    <Picker.Items>
+                        <x:String>Objective Assessment</x:String>
+                        <x:String>Perfomance Assessment</x:String>
+                        <x:String>Pre-Assessment</x:String>
+                    </Picker.Items>
+                </Picker>
+
+                <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
+                <DatePicker Grid.Row="2" Grid.Column="1" x:Name="StartDatePicker"></DatePicker>
+
+                <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
+                <DatePicker Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
+                
+                
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
