--- a/C971 Isabella Grigolla/Views/CourseEdit.xaml
+++ b/C971 Isabella Grigolla/Views/CourseEdit.xaml
@@ -84,6 +84,77 @@ FontSize="Medium" Grid.Row="4" Grid.Column="1" x:Name="CourseInstructorName"/>
 
             </Grid>
 
+            <Button x:Name="AddAssessment" Text="Add Assessments" Clicked="AddAssessment_Clicked"></Button>
+
+
+            <CollectionView x:Name="AssessmentCollectionView"
+                            ItemsSource="{Binding CourseAssessments}"
+                            EmptyView="No Assessments to display."
+                            SelectionMode="Single"
+                            SelectionChanged="AssessmentCollectionView_SelectionChanged">
+
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Vertical"
+                           ItemSpacing="10"/>
+                </CollectionView.ItemsLayout>
+
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout>
+                            <Grid Padding="5" RowSpacing="1" ColumnSpacing="11" BackgroundColor="Gray">
+
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+
+                                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Name</Label>
+                                <Label Text="{Binding Name}"
+                           x:Name="ClassName" FontSize="Medium" Grid.Row="0" Grid.Column="1" VerticalTextAlignment="Center" />
+
+
+                                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Type of Assessment</Label>
+                                <Picker Grid.Row="1" Grid.Column="1" FontSize="Medium" x:Name="AssessmentTypePicker"
+                            Title="Set a Status"
+                            TitleColor="Navy">
+                                    <Picker.Items>
+                                        <x:String>Objective Assessment</x:String>
+                                        <x:String>Perfomance Assessment</x:String>
+                                        <x:String>Pre-Assessment</x:String>
+                                    </Picker.Items>
+                                </Picker>
+
+                                <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
+                                <DatePicker Grid.Row="2" Grid.Column="1" x:Name="StartDatePicker"></DatePicker>
+
+                                <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
+                                <DatePicker Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
+
+                            </Grid>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+
+
+
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
