--- a/C971 Isabella Grigolla/Views/TermAdd.xaml
+++ b/C971 Isabella Grigolla/Views/TermAdd.xaml
@@ -12,7 +12,7 @@
     <ContentPage.Content>
         <StackLayout>
 
-            <Grid Padding="5" RowSpacing="1" ColumnSpacing="1" BackgroundColor="Gray">
+            <Grid Padding="5" RowSpacing="1" ColumnSpacing="1" BackgroundColor="LightGray">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
