--- a/C971 Isabella Grigolla/Views/TermOverview.xaml
+++ b/C971 Isabella Grigolla/Views/TermOverview.xaml
@@ -32,7 +32,7 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout>
-                        <Grid Padding="5" RowSpacing="1" ColumnSpacing="22" BackgroundColor="Gray">
+                        <Grid Padding="5" RowSpacing="1" ColumnSpacing="22" BackgroundColor="LightGray">
 
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
