--- a/C971 Isabella Grigolla/Views/TermEdit.xaml
+++ b/C971 Isabella Grigolla/Views/TermEdit.xaml
@@ -11,7 +11,7 @@
     <ContentPage.Content>
         <StackLayout>
 
-            <Grid Padding="5" RowSpacing="1" ColumnSpacing="11" BackgroundColor="Gray">
+            <Grid Padding="5" RowSpacing="1" ColumnSpacing="11" BackgroundColor="LightGray">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -63,7 +63,7 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
-                            <Grid Padding="5" RowSpacing="1" ColumnSpacing="11" BackgroundColor="Gray">
+                            <Grid Padding="5" RowSpacing="1" ColumnSpacing="11" BackgroundColor="LightSlateGray">
 
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
@@ -90,38 +90,25 @@
 
 
                                 <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Status</Label>
-                                <Picker Grid.Row="1" Grid.Column="1" FontSize="Medium" x:Name="ClassStatusPicker"
-                                        Title="Set a Status"
-                                        TitleColor="Navy">
-                                    <Picker.Items>
-                                        <x:String>In Progress</x:String>
-                                        <x:String>Completed</x:String>
-                                        <x:String>Upcoming</x:String>
-                                    </Picker.Items>
-                                </Picker>
+                                <Label Text="{Binding Status}" Grid.Row="1" Grid.Column="1" FontSize="Medium" x:Name="ClassStatusPicker"></Label>
 
                                 <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
-                                <DatePicker Grid.Row="2" Grid.Column="1" x:Name="StartDatePicker"></DatePicker>
+                                <Label Text="{Binding StartDate}" Grid.Row="2" Grid.Column="1" x:Name="StartDatePicker"></Label>
 
                                 <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
-                                <DatePicker Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
+                                <Label Text="{Binding EndDate}" Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></Label>
 
                                 <Label Grid.Row="4" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Course Instructor</Label>
-                                <Entry  Text="{Binding CourseInstrucorName}"
+                                <Label  Text="{Binding CourseInstructorName}"
                                        FontSize="Medium" Grid.Row="4" Grid.Column="1" x:Name="CourseInstructorName"/>
 
                                 <Label Grid.Row="5" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Coruse Instructor Phone:</Label>
-                                <Entry Text="{Binding CourseInstrucorPhone}"
+                                <Label Text="{Binding CourseInstructorPhone}"
                                         FontSize="Medium" Grid.Row="5" Grid.Column="1" x:Name="CourseInstructorPhone"/>
 
                                 <Label Grid.Row="6" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Course Instructor Email</Label>
-                                <Entry Text="{Binding CourseInstrucorEmail}"
+                                <Label Text="{Binding CourseInstructorEmail}"
                                         FontSize="Medium" Grid.Row="6" Grid.Column="1" x:Name="CourseInstructorEmail"/>
-
-                                
-                                
-                                
-
 
                             </Grid>
                         </StackLayout>
