--- a/C971 Isabella Grigolla/Views/TermOverview.xaml
+++ b/C971 Isabella Grigolla/Views/TermOverview.xaml
@@ -49,7 +49,9 @@
                             <Label Text="{Binding Name}"
                                        x:Name="TermName" FontSize="Medium" Grid.Row="0" Grid.Column="1" VerticalTextAlignment="Center" />
 
+                            <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Start Date</Label>
                             <Label Grid.Row="1" Grid.Column="1" Text="{Binding StartDate, StringFormat='{0:M/dd/yyyy}'}" FontSize="Medium" VerticalTextAlignment="Center"></Label>
+                            <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">End Date</Label>
                             <Label Grid.Row="2" Grid.Column="1" Text="{Binding EndDate, StringFormat='{0:M/dd/yyyy}'}" FontSize="Medium" VerticalTextAlignment="Center"></Label>
 
 
