--- a/C971 Isabella Grigolla/Views/CourseAdd.xaml
+++ b/C971 Isabella Grigolla/Views/CourseAdd.xaml
@@ -77,7 +77,7 @@
             FontSize="Medium" Grid.Row="6" Grid.Column="1" x:Name="CourseInstructorEmail"/>
 
                 <Label Grid.Row="7" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" Text="Notification" TextColor="Black"/>
-                <Switch Grid.Row="7" Grid.Column="1" x:Name="Notifications" HorizontalOptions="End" IsToggled="True" VerticalOptions="Center"/>.
+                <Switch Grid.Row="7" Grid.Column="1" x:Name="Notifications" HorizontalOptions="End" IsToggled="True" VerticalOptions="Center"/>
 
                 <Label Grid.Row="8" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" TextColor="Black">Notes</Label>
                 <Editor Grid.Row="8" Grid.Column="1" x:Name="NotesFolders" Placeholder="Enter your notes here"></Editor>
